force-app/main/default/objects/IFMaster__c/IFMaster__c.object-meta.xml
<CustomObject>
    <label>IFMaster</label>
    <nameField>
        <label>IFMaster Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>