force-app/main/default/objects/IFMaster__c/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <description>실행 프로그램 명</description>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>