force-app/main/default/objects/IFMaster__c/fields/ContentType__c.field-meta.xml
<CustomField>
    <fullName>ContentType__c</fullName>
    <label>ContentType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text/plain</fullName>
            </value>
            <value>
                <fullName>text/xml</fullName>
            </value>
            <value>
                <fullName>application/json</fullName>
            </value>
            <value>
                <fullName>application/xml</fullName>
            </value>
            <value>
                <fullName>multipart/form-data</fullName>
            </value>
            <value>
                <fullName>application/vnd.oracle.adf.resourceitem+json</fullName>
            </value>
            <value>
                <fullName>application/x-www-form-urlencoded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>