force-app/main/default/objects/IFMaster__c/fields/ifKeyId__c.field-meta.xml
<CustomField>
    <fullName>ifKeyId__c</fullName>
    <label>ifKeyId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>