force-app/main/default/objects/IFMaster__c/fields/IsRealLogInsert__c.field-meta.xml
<CustomField>
    <fullName>IsRealLogInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRealLogInsert</label>
    <type>Checkbox</type>
</CustomField>