force-app/main/default/objects/IFMaster__c/fields/Param1__c.field-meta.xml
<CustomField>
    <fullName>Param1__c</fullName>
    <label>Param1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>