force-app/main/default/objects/IFMaster__c/fields/Param3__c.field-meta.xml
<CustomField>
    <fullName>Param3__c</fullName>
    <label>Param3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>