force-app/main/default/objects/IFMaster__c/fields/WebserviceType__c.field-meta.xml
<CustomField>
    <fullName>WebserviceType__c</fullName>
    <label>WebserviceType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REST</fullName>
            </value>
            <value>
                <fullName>SOAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>