force-app/main/default/objects/IFMaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ContentType__c</columns>
    <columns>Type__c</columns>
    <columns>Method__c</columns>
    <columns>Description__c</columns>
    <columns>WebserviceType__c</columns>
    <columns>Endpoint__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>